--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: harbor-adapter
+name: cb-harbor-adapter
 description: An adapter between Harbor registry and CarbonBlack image scanning.
-version: 0.2.0
-appVersion: 0.2.0
+version: 2.2.0
+appVersion: 2.2.0
